Update editor functionality on small screens. Fixes #38 (#39)
Also remove the hover indicator when not using a mouse pointer

--- a/src/styles.css
+++ b/src/styles.css
@@ -771,7 +771,7 @@ i.fill,
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   #editor-menu {
     justify-content: center;
   }
